<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Categories" >


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="430dp"
        android:layout_height="126dp"
        android:contentDescription="@string/cat_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/head" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/category" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Editorial_Writing"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/editorial_writing"
                android:textSize="30sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/Feature_Writing"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/feature_writing"
                android:textSize="30sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/News_Writing"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/news_writing"
                android:textSize="30sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/Photo_Writing"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/photo_writing"
                android:textSize="30sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/Science_Writing"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/science_writing"
                android:textSize="30sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/Sports_Writing"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/sports_writing"
                android:textSize="30sp"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/Logout"
                android:layout_width="131dp"
                android:layout_height="63dp"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/varela_round"
                android:text="@string/logout"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:backgroundTint="@android:color/holo_red_light" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

