<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    tools:context=".sportspage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/sports_writing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sporthd" />

    <EditText
        android:id="@+id/Sports"
        android:layout_width="381dp"
        android:layout_height="604dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/entry"
        android:gravity="start"
        android:hint="@string/input_here"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="10000"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/Sports_submit"
        android:layout_width="131dp"
        android:layout_height="63dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="15sp"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sports"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/Sports_cancel"
        android:layout_width="131dp"
        android:layout_height="63dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="15sp"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sports"
        app:layout_constraintVertical_bias="0.527" />

</androidx.constraintlayout.widget.ConstraintLayout>