<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".display_entry">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="431dp"
        android:layout_height="125dp"
        android:contentDescription="@string/headerrr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/head" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="343dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/participants_entry"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/EntryView"
        android:layout_width="405dp"
        android:layout_height="630dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>