<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Admin_Add_Account">


    <EditText
        android:id="@+id/reg_Name"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/spinnerline"
        android:drawableStart="@drawable/ic_person"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Register"
        android:layout_width="174dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="54dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regspinner"
        app:layout_constraintVertical_bias="0.559" />

    <Button
        android:id="@+id/RegCancel"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="54dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Register"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantss"
        app:layout_constraintVertical_bias="0.64" />

    <EditText
        android:id="@+id/reg_Password"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/spinnerline"
        android:drawableStart="@drawable/ic_security"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Email" />

    <TextView
        android:id="@+id/participantss"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/user_type"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/regspinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Password" />

    <EditText
        android:id="@+id/reg_Email"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/spinnerline"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Name" />

    <Spinner
        android:id="@+id/regspinner"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinnerline"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Password"
        tools:targetApi="m"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="306dp"
        android:layout_height="75dp"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>